# xchromebase

./: CMakeLists.txt  absl.cmake  base_precompiled.pch  main.cpp  perfetto.cmake  xchromebase.cmake
base/: location.cc
base/containers/: intrusive_heap.h
base/strings/: string_util_internal.h
base/task/sequence_manager/: task_queue_impl.cc  work_queue.cc
base/task/thread_pool/: thread_group_impl.cc
base/time/: time_win.cc
base/trace_event/: trace_event_stub.cc
res/: args.gn  xchromebase_patch.patch
